# lobber

./: Cargo.toml  README.md  notes.md  task_plan.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/ai/: mod.rs  opponent.rs
src/game/: constants.rs  damage.rs  mod.rs  state.rs  types.rs
src/physics/: collision.rs  mod.rs  projectile.rs
src/render/: animation.rs  app.rs  battlefield.rs  draw.rs  hud.rs  mod.rs  pixel_buffer.rs  terrain.rs
src/terrain/: generation.rs  heightmap.rs  mod.rs
