[package]
name = "lobber"
version = "0.1.0"
edition = "2024"
description = "A TUI artillery game inspired by Scorched Earth"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
glam = { version = "0.29", features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
