[package]
name = "lobber"
version = "0.2.0"
edition = "2024"
description = "An artillery game inspired by Scorched Earth"

[dependencies]
macroquad = "0.4"
glam = { version = "0.29", features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
